--- a/index.html
+++ b/index.html
@@ -98,9 +98,13 @@
         </section>
     </main>
     <footer>
-        <address>
+        <nav>
             <ul>
                 <li><a href="#">WebStudio</a></li>
+            </ul>
+        </nav>
+        <address>
+            <ul>
                 <li><a href="https://goo.gl/maps/2TUbPAgfk7zZ6Xrx7" target="_blank">m. Warszawa, Aleje Jerozolimskie 21</a></li>
                 <li><a href="mailto:info@example.com">info@example.com</a></li>
                 <li><a href="tel:+48111111111">+48 111 111 111</a></li>
